// Vitest Snapshot v1

exports[`Column sort 1`] = `
"<div class=\\"_Datatable_9c1ce1\\">
  <table>
    <tr class=\\"\\">
      <!--v-if-->
      <th scope=\\"col\\" class=\\"_sortable_9c1ce1\\"><span class=\\"_colName_9c1ce1\\"><span>Name</span>
        <!--v-if--></span>
      </th>
      <th scope=\\"col\\" class=\\"_sortActive_9c1ce1\\"><span class=\\"_colName_9c1ce1\\"><span>Modified</span><span class=\\"_Icon_665cc9 material-symbols-outlined _sortIcon_9c1ce1\\">arrow_drop_down</span></span></th>
    </tr>
    <tr class=\\"\\">
      <!--v-if-->
      <td class=\\"\\" style=\\"\\">Foo</td>
      <td class=\\"\\" style=\\"\\">2022-01-01</td>
    </tr>
    <tr class=\\"\\">
      <!--v-if-->
      <td class=\\"\\" style=\\"\\">Baz</td>
      <td class=\\"\\" style=\\"\\">2022-01-04</td>
    </tr>
    <tr class=\\"\\">
      <!--v-if-->
      <td class=\\"\\" style=\\"\\">Bar</td>
      <td class=\\"\\" style=\\"\\">2022-02-01</td>
    </tr>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </table>
</div>"
`;

exports[`Selecting rows 1`] = `
"<div class=\\"_Datatable_9c1ce1\\">
  <table>
    <tr class=\\"\\">
      <th style=\\"width: 0px;\\" scope=\\"col\\"><span class=\\"_Checkbox_01f563 _checked_01f563\\"><span class=\\"_Icon_665cc9 material-symbols-outlined\\">check_box</span><input type=\\"checkbox\\"></span></th>
      <th scope=\\"col\\" class=\\"_sortable_9c1ce1\\"><span class=\\"_colName_9c1ce1\\"><span>Name</span>
        <!--v-if--></span>
      </th>
      <th scope=\\"col\\" class=\\"_sortActive_9c1ce1\\"><span class=\\"_colName_9c1ce1\\"><span>Modified</span><span class=\\"_Icon_665cc9 material-symbols-outlined _sortIcon_9c1ce1\\">arrow_drop_down</span></span></th>
    </tr>
    <tr class=\\"_rowSelected_9c1ce1\\">
      <td><span class=\\"_Checkbox_01f563 _checked_01f563\\"><span class=\\"_Icon_665cc9 material-symbols-outlined\\">check_box</span><input type=\\"checkbox\\"></span></td>
      <td class=\\"\\" style=\\"\\">Foo</td>
      <td class=\\"\\" style=\\"\\">2022-01-01</td>
    </tr>
    <tr class=\\"_rowSelected_9c1ce1\\">
      <td><span class=\\"_Checkbox_01f563 _checked_01f563\\"><span class=\\"_Icon_665cc9 material-symbols-outlined\\">check_box</span><input type=\\"checkbox\\"></span></td>
      <td class=\\"\\" style=\\"\\">Baz</td>
      <td class=\\"\\" style=\\"\\">2022-01-04</td>
    </tr>
    <tr class=\\"_rowSelected_9c1ce1\\">
      <td><span class=\\"_Checkbox_01f563 _checked_01f563\\"><span class=\\"_Icon_665cc9 material-symbols-outlined\\">check_box</span><input type=\\"checkbox\\"></span></td>
      <td class=\\"\\" style=\\"\\">Bar</td>
      <td class=\\"\\" style=\\"\\">2022-02-01</td>
    </tr>
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </table>
</div>"
`;

exports[`Show more 1`] = `
"<div class=\\"_Datatable_9c1ce1\\">
  <table>
    <tr class=\\"\\">
      <!--v-if-->
      <th scope=\\"col\\" class=\\"_sortable_9c1ce1\\"><span class=\\"_colName_9c1ce1\\"><span>Name</span>
        <!--v-if--></span>
      </th>
      <th scope=\\"col\\" class=\\"_sortActive_9c1ce1\\"><span class=\\"_colName_9c1ce1\\"><span>Modified</span><span class=\\"_Icon_665cc9 material-symbols-outlined _sortIcon_9c1ce1\\">arrow_drop_down</span></span></th>
    </tr>
    <tr class=\\"\\">
      <!--v-if-->
      <td class=\\"\\" style=\\"\\">Foo</td>
      <td class=\\"\\" style=\\"\\">2022-01-01</td>
    </tr>
    <tr class=\\"\\">
      <!--v-if-->
      <td class=\\"\\" style=\\"\\">Baz</td>
      <td class=\\"\\" style=\\"\\">2022-01-04</td>
    </tr>
    <tr class=\\"\\">
      <!--v-if-->
      <td class=\\"\\" style=\\"\\">Bar</td>
      <td class=\\"\\" style=\\"\\">2022-02-01</td>
    </tr>
    <!--v-if-->
    <tr class=\\"_showMore_9c1ce1\\">
      <td colspan=\\"999\\"><button style=\\"--bnt-rgb: var(--dodo-rgb-info);\\" type=\\"button\\" class=\\"_Button_962483 _text_962483 _loading_962483\\">
          <div class=\\"_content_962483\\">Show more results</div>
          <div class=\\"_Spinner_b556f8 _spinner_962483\\"><svg style=\\"\\" viewBox=\\"0 0 18 18\\">
              <path stroke=\\"currentColor\\" fill=\\"none\\" d=\\"M 9 1 A 8 8 0 0 1 17 9\\" stroke-width=\\"2\\"></path>
              <path stroke=\\"currentColor\\" opacity=\\"0.33\\" fill=\\"none\\" d=\\"M 17 9 A 8 8 0 1 1 9 1\\" stroke-width=\\"2\\"></path>
            </svg></div>
        </button></td>
    </tr>
    <!--v-if-->
  </table>
</div>"
`;
